--- a/papers/conext2022/extensions.tex
+++ b/papers/conext2022/extensions.tex
@@ -2,7 +2,7 @@
 
 In this paper, we have presented the cloud morphing vision for
 future distributed cloud services,
-proposed a resource allocation model based on cost fuctions,
+proposed a resource allocation model based on cost functions,
 and presented how the idle-resource pooling works.
 We are planning to refine the proposed model and develop a working
 prototype system.
@@ -11,7 +11,7 @@ For the model refinement,
 the current model is simplistic so that we will add bidirectional
 communication costs,
 multiple users per job, interactions among jobs, and other features.
-We did not consider dependency among microservice jobs but it would be
+We did not consider dependency among microservice jobs, but it would be
 necessary to investigate the impact of the interplay of microservice
 jobs ~\cite{Suresh-SOA-SOCC2017}.
 
