--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -27,7 +27,7 @@ The capacities of MDC and DC are set to 100 and 1,000.
 Note that the capacity of DCs is 10 times larger than that of MDCs
 so that DC's load in the top plot looks much smaller for the same
 volume of jobs.
-In the normalizede total load in the bottom plot, the volume is normalized
+In the normalized total load in the bottom plot, the volume is normalized
 to the capacity $C$ of MDC to show the total volume of jobs:
 $\sum \tilde{\rho}$, \:$\tilde{\rho} = \rho \cdot C/C_{MDC}$.
 
