--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -88,8 +88,8 @@ without affecting the stability of the system.
 
 To realize such systems, it requires various technical advances across
 many fields.  Among other things, new autonomous resource management
-model is needed for distributed diverse cloud resources,
-which is the topic of this short paper.
+model is needed for distributed diverse resources,
+which is the topic of this paper.
 
 \subsection{Resource Management}
 
@@ -104,6 +104,8 @@ To this end, we employ dynamic pricing for decentralized resource
 allocation which works as backpressure against congestion.
 By design, serious congestion never happens in the system as long as
 some resources remain available in the resource pool.
+It also reserves a sufficient margin essential for the performance of
+statistical multiplexing services.
 
 We use pseudo cost for manipulating resource allocation.
 Here, pseudo cost is not an actual monetary charge, but it is used to
