--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -131,7 +131,7 @@ Overall, the simulation results illustrate the basic behaviors of the
 idle-resource pooling,
 quick responses to changing
 load by offloading excess jobs to upstream DCs,
-yet converging to stable states once the load is settled,
+and converging to stable states once the load is settled
 while maintaining the load for each active resource at around the target
 load.
 
