--- a/papers/conext2022/intro.tex
+++ b/papers/conext2022/intro.tex
@@ -105,7 +105,7 @@ allocation which works as backpressure against congestion.
 By design, serious congestion never happens in the system as long as
 some resources remain available in the resource pool.
 It also reserves a sufficient margin essential for the performance of
-statistical multiplexing services.
+statistically multiplexing services.
 
 We use pseudo cost for manipulating resource allocation.
 Here, pseudo cost is not an actual monetary charge, but it is used to
