fix an error in edit

--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -23,8 +23,7 @@ the settings are described in the simulation tool.
 The effects of manipulating the cost function and the resource weight
 for a job is illustrated in Figure~\ref{fig:lowering} using the
 topology in Figure~\ref{fig:system}.
-The capacities of MDC and DC are set to 100 and 1,000 respectively
-.
+The capacities of MDC and DC are set to 100 and 1,000 respectively.
 Note that the capacity of DCs is 10 times larger than that of MDCs
 so that DC's load in the top plot looks much smaller for the same
 volume of jobs.
