Cleaning of _research/tmp. Restructure the paper latex structure

--- a/papers/conext2022/main.tex
+++ b/papers/conext2022/main.tex
@@ -1,6 +1,8 @@
 \documentclass[10pt,sigconf,letterpaper,anonymous,nonacm]{acmart}
 \usepackage{mathtools}
 
+\graphicspath{{../../figures/conext2022/}}
+
 \title{Cloud Morphing: A Responsive Model for Distributed Resource Management}
 
 \begin{document}
