--- a/papers/conext2022/simulation.tex
+++ b/papers/conext2022/simulation.tex
@@ -8,7 +8,7 @@ the settings are described in the simulation tool.
 
 \begin{figure}[tb]
   \begin{center}
-    \includegraphics[width=1.0\columnwidth]{fig6-4nodes.pdf}
+    \includegraphics[width=1.0\columnwidth]{figure6-costs_manipulation.pdf}
     \vspace{-2.0ex}
     \caption{Cost manipulations: shifting the load +.2,
       +.4 and raising the weight for data access}
@@ -71,7 +71,7 @@ and how jobs for MDCs can be offloaded to upstream DCs.
 
 \begin{figure}[tb]
   \begin{center}
-    \includegraphics[width=1.0\columnwidth]{simu2.pdf}
+    \includegraphics[width=1.0\columnwidth]{figure7-mixed_load_4nodes.pdf}
     \vspace{-2.0ex}
     \caption{Mixed load with 2 DCs and 2 MDCs}
     \Description{Simulation results with mixed scenario.}
@@ -104,7 +104,7 @@ and how jobs for MDCs can be offloaded to upstream DCs.
 
 \begin{figure}[tb]
   \centering
-  \includegraphics[width=\columnwidth]{18nodes.pdf}
+  \includegraphics[width=\columnwidth]{figure8-mixed_load_18nodes.pdf}
   \vspace{-2.0ex}
   \caption{Mixed load with 18 DCs}
   \Description{A more complex scenario to illustrate offloading behaviors.}
