--- a/papers/conext2022/cloudmorphing.bib
+++ b/papers/conext2022/cloudmorphing.bib
@@ -7,7 +7,7 @@
   volume    = {},
   number    = {},
   pages     = {47-54},
-  publisher  = {IEEE},
+  publisher = {IEEE},
   doi       = {10.1109/IEEE.EDGE.2017.15}
 }
 
@@ -21,7 +21,7 @@
   pages   = {1034-1047},
   doi     = {10.1109/TNET.2016.2619743}
 }
-  
+
 @article{Henderson2001,
   author  = {Henderson, T. and Crowcroft, J. and Bhatti, S.},
   journal = {IEEE Internet Computing},
@@ -45,14 +45,14 @@
 }
 
 @article{Kelly-1998,
-author = {Kelly, F.P. and Maulloo, A.K. and Tan, D.},
-year = {1998},
-month = {02},
-pages = {},
-title = {Rate Control for Communication Networks:Shadow Prices, Proportional Fairness and Stability},
-volume = {49},
-journal = {Journal of the Operational Research Society},
-doi = {10.1057/palgrave.jors.2600523},
+  author  = {Kelly, F.P. and Maulloo, A.K. and Tan, D.},
+  year    = {1998},
+  month   = {02},
+  pages   = {},
+  title   = {Rate Control for Communication Networks:Shadow Prices, Proportional Fairness and Stability},
+  volume  = {49},
+  journal = {Journal of the Operational Research Society},
+  doi     = {10.1057/palgrave.jors.2600523}
 }
 
 @article{Rikhtegar2021BiTEAD,
@@ -144,7 +144,7 @@ doi = {10.1057/palgrave.jors.2600523},
   volume    = {},
   number    = {},
   pages     = {647-653},
-  publisher  = {IEEE},
+  publisher = {IEEE},
   doi       = {10.1109/INFCOMW.2017.8116453}
 }
 
@@ -237,7 +237,7 @@ doi = {10.1057/palgrave.jors.2600523},
   volume    = {},
   number    = {},
   pages     = {311-314},
-  publisher  = {IEEE},
+  publisher = {IEEE},
   doi       = {10.1109/ICUFN.2014.6876803}
 }
 
@@ -319,215 +319,215 @@ doi = {10.1057/palgrave.jors.2600523},
 }
 
 @inproceedings{Wagner-2012,
- author={Wagner, Stuart and Berg, Eric Van Den and Giacopelli, Jim and Ghetie, Andrei and Burns, Jim and Tauil, Miriam and Sen, Soumya and Wang, Michael and Chiang, Mung and Lan, Tian and Laddaga, Robert and Robertson, Paul and Manghwani, Prakash},
-  booktitle={2012 IEEE Sixth International Conference on Self-Adaptive and Self-Organizing Systems Workshops}, 
-  title={Autonomous, Collaborative Control for Resilient Cyber Defense (ACCORD)}, 
-  year={2012},
-  volume={},
-  number={},
-  pages={39-46},
-  publisher  = {IEEE},
-  doi={10.1109/SASOW.2012.16}
+  author    = {Wagner, Stuart and Berg, Eric Van Den and Giacopelli, Jim and Ghetie, Andrei and Burns, Jim and Tauil, Miriam and Sen, Soumya and Wang, Michael and Chiang, Mung and Lan, Tian and Laddaga, Robert and Robertson, Paul and Manghwani, Prakash},
+  booktitle = {2012 IEEE Sixth International Conference on Self-Adaptive and Self-Organizing Systems Workshops},
+  title     = {Autonomous, Collaborative Control for Resilient Cyber Defense (ACCORD)},
+  year      = {2012},
+  volume    = {},
+  number    = {},
+  pages     = {39-46},
+  publisher = {IEEE},
+  doi       = {10.1109/SASOW.2012.16}
 }
 
-@INPROCEEDINGS{Murphy94distributedpricing,
-    author = {John Murphy and Liam Murphy and Edward C. Posner},
-    title = {Distributed Pricing For Embedded ATM Networks},
-    booktitle = {in Proceedings of the 14th International Teletraffic Congress, edited by J. Labetoulle and J.W. Roberts, Elsevier Science},
-    year = {1994},
-    pages = {1053--1063},
+@inproceedings{Murphy94distributedpricing,
+  author    = {John Murphy and Liam Murphy and Edward C. Posner},
+  title     = {Distributed Pricing For Embedded ATM Networks},
+  booktitle = {in Proceedings of the 14th International Teletraffic Congress, edited by J. Labetoulle and J.W. Roberts, Elsevier Science},
+  year      = {1994},
+  pages     = {1053--1063}
 }
 
 @incollection{MURPHY19941053,
-title = {Distributed Pricing For Embedded ATM Networks},
-editor = {JACQUES LABETOULLE and JAMES W. ROBERTS},
-series = {Teletraffic Science and Engineering},
-publisher = {Elsevier},
-volume = {1},
-pages = {1053-1063},
-year = {1994},
-booktitle = {The Fundamental Role of Teletraffic in the Evolution of Telecommunications Networks},
-issn = {1388-3437},
-doi = {https://doi.org/10.1016/B978-0-444-82031-0.50108-6},
-url = {https://www.sciencedirect.com/science/article/pii/B9780444820310501086},
-author = {John Murphy and Liam Murphy and Edward C. Posner}
+  title     = {Distributed Pricing For Embedded ATM Networks},
+  editor    = {JACQUES LABETOULLE and JAMES W. ROBERTS},
+  series    = {Teletraffic Science and Engineering},
+  publisher = {Elsevier},
+  volume    = {1},
+  pages     = {1053-1063},
+  year      = {1994},
+  booktitle = {The Fundamental Role of Teletraffic in the Evolution of Telecommunications Networks},
+  issn      = {1388-3437},
+  doi       = {https://doi.org/10.1016/B978-0-444-82031-0.50108-6},
+  url       = {https://www.sciencedirect.com/science/article/pii/B9780444820310501086},
+  author    = {John Murphy and Liam Murphy and Edward C. Posner}
 }
 
 @inproceedings{Chen-SOCC-2014,
-author = {Chen, Liuhua and Shen, Haiying and Sapra, Karan},
-title = {Distributed Autonomous Virtual Resource Management in Datacenters Using Finite-Markov Decision Process},
-year = {2014},
-isbn = {9781450332521},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/2670979.2671003},
-doi = {10.1145/2670979.2671003},
-booktitle = {Proceedings of the ACM Symposium on Cloud Computing},
-pages = {1–13},
-numpages = {13},
-keywords = {MDP, Resource management, Cloud computing},
-location = {Seattle, WA, USA},
-series = {SOCC '14},
+  author    = {Chen, Liuhua and Shen, Haiying and Sapra, Karan},
+  title     = {Distributed Autonomous Virtual Resource Management in Datacenters Using Finite-Markov Decision Process},
+  year      = {2014},
+  isbn      = {9781450332521},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/2670979.2671003},
+  doi       = {10.1145/2670979.2671003},
+  booktitle = {Proceedings of the ACM Symposium on Cloud Computing},
+  pages     = {1–13},
+  numpages  = {13},
+  keywords  = {MDP, Resource management, Cloud computing},
+  location  = {Seattle, WA, USA},
+  series    = {SOCC '14}
 }
 
 @article{masanet2020recalibrating,
-  title={Recalibrating global data center energy-use estimates},
-  author={Masanet, Eric and Shehabi, Arman and Lei, Nuoa and Smith, Sarah and Koomey, Jonathan},
-  journal={Science},
-  volume={367},
-  number={6481},
-  pages={984--986},
-  year={2020},
-  publisher={American Association for the Advancement of Science},
+  title     = {Recalibrating global data center energy-use estimates},
+  author    = {Masanet, Eric and Shehabi, Arman and Lei, Nuoa and Smith, Sarah and Koomey, Jonathan},
+  journal   = {Science},
+  volume    = {367},
+  number    = {6481},
+  pages     = {984--986},
+  year      = {2020},
+  publisher = {American Association for the Advancement of Science}
 }
 
 @article{Mastelic-2015,
-author = {Mastelic, Toni and Oleksiak, Ariel and Claussen, Holger and Brandic, Ivona and Pierson, Jean-Marc and Vasilakos, Athanasios V.},
-title = {Cloud Computing: Survey on Energy Efficiency},
-year = {2014},
-issue_date = {January 2015},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-volume = {47},
-number = {2},
-issn = {0360-0300},
-url = {https://doi.org/10.1145/2656204},
-doi = {10.1145/2656204},
-abstract = {Cloud computing is today’s most emphasized Information and Communications Technology (ICT) paradigm that is directly or indirectly used by almost every online user. However, such great significance comes with the support of a great infrastructure that includes large data centers comprising thousands of server units and other supporting equipment. Their share in power consumption generates between 1.1% and 1.5% of the total electricity use worldwide and is projected to rise even more. Such alarming numbers demand rethinking the energy efficiency of such infrastructures. However, before making any changes to infrastructure, an analysis of the current status is required. In this article, we perform a comprehensive analysis of an infrastructure supporting the cloud computing paradigm with regards to energy efficiency. First, we define a systematic approach for analyzing the energy efficiency of most important data center domains, including server and network equipment, as well as cloud management systems and appliances consisting of a software utilized by end users. Second, we utilize this approach for analyzing available scientific and industrial literature on state-of-the-art practices in data centers and their equipment. Finally, we extract existing challenges and highlight future research directions.},
-journal = {ACM Comput. Surv.},
-month = {dec},
-articleno = {33},
-numpages = {36},
-keywords = {network, Cloud computing, cloud management system, data center, servers, energy efficiency, appliances}
+  author     = {Mastelic, Toni and Oleksiak, Ariel and Claussen, Holger and Brandic, Ivona and Pierson, Jean-Marc and Vasilakos, Athanasios V.},
+  title      = {Cloud Computing: Survey on Energy Efficiency},
+  year       = {2014},
+  issue_date = {January 2015},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {47},
+  number     = {2},
+  issn       = {0360-0300},
+  url        = {https://doi.org/10.1145/2656204},
+  doi        = {10.1145/2656204},
+  abstract   = {Cloud computing is today’s most emphasized Information and Communications Technology (ICT) paradigm that is directly or indirectly used by almost every online user. However, such great significance comes with the support of a great infrastructure that includes large data centers comprising thousands of server units and other supporting equipment. Their share in power consumption generates between 1.1% and 1.5% of the total electricity use worldwide and is projected to rise even more. Such alarming numbers demand rethinking the energy efficiency of such infrastructures. However, before making any changes to infrastructure, an analysis of the current status is required. In this article, we perform a comprehensive analysis of an infrastructure supporting the cloud computing paradigm with regards to energy efficiency. First, we define a systematic approach for analyzing the energy efficiency of most important data center domains, including server and network equipment, as well as cloud management systems and appliances consisting of a software utilized by end users. Second, we utilize this approach for analyzing available scientific and industrial literature on state-of-the-art practices in data centers and their equipment. Finally, we extract existing challenges and highlight future research directions.},
+  journal    = {ACM Comput. Surv.},
+  month      = {dec},
+  articleno  = {33},
+  numpages   = {36},
+  keywords   = {network, Cloud computing, cloud management system, data center, servers, energy efficiency, appliances}
 }
 
 @article{Shafiei-2022,
-author = {Shafiei, Hossein and Khonsari, Ahmad and Mousavi, Payam},
-title = {Serverless Computing: A Survey of Opportunities, Challenges, and Applications},
-year = {2022},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-issn = {0360-0300},
-url = {https://doi.org/10.1145/3510611},
-doi = {10.1145/3510611},
-abstract = {The emerging serverless computing paradigm has attracted attention from both academia and industry. This paradigm brings benefits such as less operational complexity, a pay-as-you-go pricing model, and an auto-scaling feature. The paradigm opens up new opportunities and challenges for cloud application developers. In this paper, we present a comprehensive overview of the past development as well as the recent advances in research areas related to serverless computing. First, we survey serverless applications introduced in the literature. We categorize applications in eight domains and separately discuss the objectives and the viability of the serverless paradigm along with challenges in each of those domains. We then classify those challenges into nine topics and survey the proposed solutions. Finally, we present the areas that need further attention from the research community and identify open problems.},
-note = {Just Accepted},
-journal = {ACM Comput. Surv.},
-month = {jan},
-keywords = {Function-as-a-Service (FaaS), Serverless Computing, Cloud Services}
+  author    = {Shafiei, Hossein and Khonsari, Ahmad and Mousavi, Payam},
+  title     = {Serverless Computing: A Survey of Opportunities, Challenges, and Applications},
+  year      = {2022},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  issn      = {0360-0300},
+  url       = {https://doi.org/10.1145/3510611},
+  doi       = {10.1145/3510611},
+  abstract  = {The emerging serverless computing paradigm has attracted attention from both academia and industry. This paradigm brings benefits such as less operational complexity, a pay-as-you-go pricing model, and an auto-scaling feature. The paradigm opens up new opportunities and challenges for cloud application developers. In this paper, we present a comprehensive overview of the past development as well as the recent advances in research areas related to serverless computing. First, we survey serverless applications introduced in the literature. We categorize applications in eight domains and separately discuss the objectives and the viability of the serverless paradigm along with challenges in each of those domains. We then classify those challenges into nine topics and survey the proposed solutions. Finally, we present the areas that need further attention from the research community and identify open problems.},
+  note      = {Just Accepted},
+  journal   = {ACM Comput. Surv.},
+  month     = {jan},
+  keywords  = {Function-as-a-Service (FaaS), Serverless Computing, Cloud Services}
 }
 
 @article{Lopez-2015,
-author = {Garcia Lopez, Pedro and Montresor, Alberto and Epema, Dick and Datta, Anwitaman and Higashino, Teruo and Iamnitchi, Adriana and Barcellos, Marinho and Felber, Pascal and Riviere, Etienne},
-title = {Edge-Centric Computing: Vision and Challenges},
-year = {2015},
-issue_date = {October 2015},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-volume = {45},
-number = {5},
-issn = {0146-4833},
-url = {https://doi.org/10.1145/2831347.2831354},
-doi = {10.1145/2831347.2831354},
-abstract = {In many aspects of human activity, there has been a continuous struggle between the forces of centralization and decentralization. Computing exhibits the same phenomenon; we have gone from mainframes to PCs and local networks in the past, and over the last decade we have seen a centralization and consolidation of services and applications in data centers and clouds. We position that a new shift is necessary. Technological advances such as powerful dedicated connection boxes deployed in most homes, high capacity mobile end-user devices and powerful wireless networks, along with growing user concerns about trust, privacy, and autonomy requires taking the control of computing applications, data, and services away from some central nodes (the "core") to the other logical extreme (the "edge") of the Internet. We also position that this development can help blurring the boundary between man and machine, and embrace social computing in which humans are part of the computation and decision making loop, resulting in a human-centered system design. We refer to this vision of human-centered edge-device based computing as Edge-centric Computing. We elaborate in this position paper on this vision and present the research challenges associated with its implementation.},
-journal = {SIGCOMM Comput. Commun. Rev.},
-month = {sep},
-pages = {37–42},
-numpages = {6},
-keywords = {cloud computing, fog computing, decentralized systems, peer-to-peer}
+  author     = {Garcia Lopez, Pedro and Montresor, Alberto and Epema, Dick and Datta, Anwitaman and Higashino, Teruo and Iamnitchi, Adriana and Barcellos, Marinho and Felber, Pascal and Riviere, Etienne},
+  title      = {Edge-Centric Computing: Vision and Challenges},
+  year       = {2015},
+  issue_date = {October 2015},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {45},
+  number     = {5},
+  issn       = {0146-4833},
+  url        = {https://doi.org/10.1145/2831347.2831354},
+  doi        = {10.1145/2831347.2831354},
+  abstract   = {In many aspects of human activity, there has been a continuous struggle between the forces of centralization and decentralization. Computing exhibits the same phenomenon; we have gone from mainframes to PCs and local networks in the past, and over the last decade we have seen a centralization and consolidation of services and applications in data centers and clouds. We position that a new shift is necessary. Technological advances such as powerful dedicated connection boxes deployed in most homes, high capacity mobile end-user devices and powerful wireless networks, along with growing user concerns about trust, privacy, and autonomy requires taking the control of computing applications, data, and services away from some central nodes (the "core") to the other logical extreme (the "edge") of the Internet. We also position that this development can help blurring the boundary between man and machine, and embrace social computing in which humans are part of the computation and decision making loop, resulting in a human-centered system design. We refer to this vision of human-centered edge-device based computing as Edge-centric Computing. We elaborate in this position paper on this vision and present the research challenges associated with its implementation.},
+  journal    = {SIGCOMM Comput. Commun. Rev.},
+  month      = {sep},
+  pages      = {37–42},
+  numpages   = {6},
+  keywords   = {cloud computing, fog computing, decentralized systems, peer-to-peer}
 }
 
 @article{Greenberg-2009,
-author = {Greenberg, Albert and Hamilton, James and Maltz, David A. and Patel, Parveen},
-title = {The Cost of a Cloud: Research Problems in Data Center Networks},
-year = {2009},
-issue_date = {January 2009},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-volume = {39},
-number = {1},
-issn = {0146-4833},
-url = {https://doi.org/10.1145/1496091.1496103},
-doi = {10.1145/1496091.1496103},
-abstract = {The data centers used to create cloud services represent a significant investment in capital outlay and ongoing costs. Accordingly, we first examine the costs of cloud service data centers today. The cost breakdown reveals the importance of optimizing work completed per dollar invested. Unfortunately, the resources inside the data centers often operate at low utilization due to resource stranding and fragmentation. To attack this first problem, we propose (1) increasing network agility, and (2) providing appropriate incentives to shape resource consumption. Second, we note that cloud service providers are building out geo-distributed networks of data centers. Geo-diversity lowers latency to users and increases reliability in the presence of an outage taking out an entire site. However, without appropriate design and management, these geo-diverse data center networks can raise the cost of providing service. Moreover, leveraging geo-diversity requires services be designed to benefit from it. To attack this problem, we propose (1) joint optimization of network and data center resources, and (2) new systems and mechanisms for geo-distributing state.},
-journal = {SIGCOMM Comput. Commun. Rev.},
-month = {dec},
-pages = {68–73},
-numpages = {6},
-keywords = {costs, network challenges, cloud-service data centers}
+  author     = {Greenberg, Albert and Hamilton, James and Maltz, David A. and Patel, Parveen},
+  title      = {The Cost of a Cloud: Research Problems in Data Center Networks},
+  year       = {2009},
+  issue_date = {January 2009},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {39},
+  number     = {1},
+  issn       = {0146-4833},
+  url        = {https://doi.org/10.1145/1496091.1496103},
+  doi        = {10.1145/1496091.1496103},
+  abstract   = {The data centers used to create cloud services represent a significant investment in capital outlay and ongoing costs. Accordingly, we first examine the costs of cloud service data centers today. The cost breakdown reveals the importance of optimizing work completed per dollar invested. Unfortunately, the resources inside the data centers often operate at low utilization due to resource stranding and fragmentation. To attack this first problem, we propose (1) increasing network agility, and (2) providing appropriate incentives to shape resource consumption. Second, we note that cloud service providers are building out geo-distributed networks of data centers. Geo-diversity lowers latency to users and increases reliability in the presence of an outage taking out an entire site. However, without appropriate design and management, these geo-diverse data center networks can raise the cost of providing service. Moreover, leveraging geo-diversity requires services be designed to benefit from it. To attack this problem, we propose (1) joint optimization of network and data center resources, and (2) new systems and mechanisms for geo-distributing state.},
+  journal    = {SIGCOMM Comput. Commun. Rev.},
+  month      = {dec},
+  pages      = {68–73},
+  numpages   = {6},
+  keywords   = {costs, network challenges, cloud-service data centers}
 }
 
 
 @book{nadareishvili2016microservice,
-  title={Microservice architecture: aligning principles, practices, and culture},
-  author={Nadareishvili, Irakli and Mitra, Ronnie and McLarty, Matt and Amundsen, Mike},
-  year={2016},
-  publisher={" O'Reilly Media, Inc."}
+  title     = {Microservice architecture: aligning principles, practices, and culture},
+  author    = {Nadareishvili, Irakli and Mitra, Ronnie and McLarty, Matt and Amundsen, Mike},
+  year      = {2016},
+  publisher = {" O'Reilly Media, Inc."}
 }
 
 @inproceedings{aazam2015dynamic,
-  title={Dynamic resource provisioning through fog micro datacenter},
-  author={Aazam, Mohammad and Huh, Eui-Nam},
-  booktitle={2015 IEEE international conference on pervasive computing and communication workshops (PerCom workshops)},
-  pages={105--110},
-  year={2015},
-  organization={IEEE}
+  title        = {Dynamic resource provisioning through fog micro datacenter},
+  author       = {Aazam, Mohammad and Huh, Eui-Nam},
+  booktitle    = {2015 IEEE international conference on pervasive computing and communication workshops (PerCom workshops)},
+  pages        = {105--110},
+  year         = {2015},
+  organization = {IEEE}
 }
 
 @inproceedings{varghese2016challenges,
-  title={Challenges and opportunities in edge computing},
-  author={Varghese, Blesson and Wang, Nan and Barbhuiya, Sakil and Kilpatrick, Peter and Nikolopoulos, Dimitrios S},
-  booktitle={2016 IEEE International Conference on Smart Cloud (SmartCloud)},
-  pages={20--26},
-  year={2016},
-  organization={IEEE}
+  title        = {Challenges and opportunities in edge computing},
+  author       = {Varghese, Blesson and Wang, Nan and Barbhuiya, Sakil and Kilpatrick, Peter and Nikolopoulos, Dimitrios S},
+  booktitle    = {2016 IEEE International Conference on Smart Cloud (SmartCloud)},
+  pages        = {20--26},
+  year         = {2016},
+  organization = {IEEE}
 }
 
 @article{10.1145/2637364.2591980,
-author = {Shi, Weijie and Zhang, Linquan and Wu, Chuan and Li, Zongpeng and Lau, Francis C.M.},
-title = {An Online Auction Framework for Dynamic Resource Provisioning in Cloud Computing},
-year = {2014},
-issue_date = {June 2014},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-volume = {42},
-number = {1},
-issn = {0163-5999},
-url = {https://doi.org/10.1145/2637364.2591980},
-doi = {10.1145/2637364.2591980},
-abstract = {Auction mechanisms have recently attracted substantial attention as an efficient approach to pricing and resource allocation in cloud computing. This work, to the authors' knowledge, represents the first online combinatorial auction designed in the cloud computing paradigm, which is general and expressive enough to both (a) optimize system efficiency across the temporal domain instead of at an isolated time point, and (b) model dynamic provisioning of heterogeneous Virtual Machine (VM) types in practice. The final result is an online auction framework that is truthful, computationally efficient, and guarantees a competitive ratio ~ e+ 1 over e-1 ~ 3.30 in social welfare in typical scenarios. The framework consists of three main steps: (1) a tailored primal-dual algorithm that decomposes the long-term optimization into a series of independent one-shot optimization problems, with an additive loss of 1 over e-1 in competitive ratio, (2) a randomized auction sub-framework that applies primal-dual optimization for translating a centralized co-operative social welfare approximation algorithm into an auction mechanism, retaining a similar approximation ratio while adding truthfulness, and (3) a primal-dual update plus dual fitting algorithm for approximating the one-shot optimization with a ratio λ close to e. The efficacy of the online auction framework is validated through theoretical analysis and trace-driven simulation studies. We are also in the hope that the framework, as well as its three independent modules, can be instructive in auction design for other related problems.},
-journal = {SIGMETRICS Perform. Eval. Rev.},
-month = {jun},
-pages = {71–83},
-numpages = {13},
-keywords = {cloud computing, combinatorial auction, online algorithms, pricing, resource allocation, truthful mechanisms}
+  author     = {Shi, Weijie and Zhang, Linquan and Wu, Chuan and Li, Zongpeng and Lau, Francis C.M.},
+  title      = {An Online Auction Framework for Dynamic Resource Provisioning in Cloud Computing},
+  year       = {2014},
+  issue_date = {June 2014},
+  publisher  = {Association for Computing Machinery},
+  address    = {New York, NY, USA},
+  volume     = {42},
+  number     = {1},
+  issn       = {0163-5999},
+  url        = {https://doi.org/10.1145/2637364.2591980},
+  doi        = {10.1145/2637364.2591980},
+  abstract   = {Auction mechanisms have recently attracted substantial attention as an efficient approach to pricing and resource allocation in cloud computing. This work, to the authors' knowledge, represents the first online combinatorial auction designed in the cloud computing paradigm, which is general and expressive enough to both (a) optimize system efficiency across the temporal domain instead of at an isolated time point, and (b) model dynamic provisioning of heterogeneous Virtual Machine (VM) types in practice. The final result is an online auction framework that is truthful, computationally efficient, and guarantees a competitive ratio ~ e+ 1 over e-1 ~ 3.30 in social welfare in typical scenarios. The framework consists of three main steps: (1) a tailored primal-dual algorithm that decomposes the long-term optimization into a series of independent one-shot optimization problems, with an additive loss of 1 over e-1 in competitive ratio, (2) a randomized auction sub-framework that applies primal-dual optimization for translating a centralized co-operative social welfare approximation algorithm into an auction mechanism, retaining a similar approximation ratio while adding truthfulness, and (3) a primal-dual update plus dual fitting algorithm for approximating the one-shot optimization with a ratio λ close to e. The efficacy of the online auction framework is validated through theoretical analysis and trace-driven simulation studies. We are also in the hope that the framework, as well as its three independent modules, can be instructive in auction design for other related problems.},
+  journal    = {SIGMETRICS Perform. Eval. Rev.},
+  month      = {jun},
+  pages      = {71–83},
+  numpages   = {13},
+  keywords   = {cloud computing, combinatorial auction, online algorithms, pricing, resource allocation, truthful mechanisms}
 }
 
 @inproceedings{Shi-SIGMETRIC-2014,
-author = {Shi, Weijie and Zhang, Linquan and Wu, Chuan and Li, Zongpeng and Lau, Francis C.M.},
-title = {An Online Auction Framework for Dynamic Resource Provisioning in Cloud Computing},
-year = {2014},
-isbn = {9781450327893},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/2591971.2591980},
-doi = {10.1145/2591971.2591980},
-booktitle = {The 2014 ACM International Conference on Measurement and Modeling of Computer Systems},
-pages = {71–83},
-numpages = {13},
-keywords = {online algorithms, truthful mechanisms, combinatorial auction, resource allocation, cloud computing, pricing},
-location = {Austin, Texas, USA},
-series = {SIGMETRICS '14}
+  author    = {Shi, Weijie and Zhang, Linquan and Wu, Chuan and Li, Zongpeng and Lau, Francis C.M.},
+  title     = {An Online Auction Framework for Dynamic Resource Provisioning in Cloud Computing},
+  year      = {2014},
+  isbn      = {9781450327893},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/2591971.2591980},
+  doi       = {10.1145/2591971.2591980},
+  booktitle = {The 2014 ACM International Conference on Measurement and Modeling of Computer Systems},
+  pages     = {71–83},
+  numpages  = {13},
+  keywords  = {online algorithms, truthful mechanisms, combinatorial auction, resource allocation, cloud computing, pricing},
+  location  = {Austin, Texas, USA},
+  series    = {SIGMETRICS '14}
 }
 
-@ARTICLE{Zaman-2013,
-  author={Zaman, Sharrukh and Grosu, Daniel},
-  journal={IEEE Transactions on Cloud Computing}, 
-  title={A Combinatorial Auction-Based Mechanism for Dynamic VM Provisioning and Allocation in Clouds}, 
-  year={2013},
-  volume={1},
-  number={2},
- pages={129-141},
-   publisher  = {IEEE},
-  doi={10.1109/TCC.2013.9}
+@article{Zaman-2013,
+  author    = {Zaman, Sharrukh and Grosu, Daniel},
+  journal   = {IEEE Transactions on Cloud Computing},
+  title     = {A Combinatorial Auction-Based Mechanism for Dynamic VM Provisioning and Allocation in Clouds},
+  year      = {2013},
+  volume    = {1},
+  number    = {2},
+  pages     = {129-141},
+  publisher = {IEEE},
+  doi       = {10.1109/TCC.2013.9}
 }
