add a concept figure

--- a/papers/edgesys 2023/intro.tex
+++ b/papers/edgesys 2023/intro.tex
@@ -55,11 +55,23 @@ essential for future clouds~\cite{Mastelic-2015,masanet2020recalibrating}.
 
 \subsection{Cloud Morphing Vision}
 
+\begin{figure}[tb]
+  \begin{center}
+    \includegraphics[width=0.8\columnwidth]{morphing-concept.pdf}
+    \vspace{-2.0ex}
+    \caption{Cloud morphing concept: the shape of a cloud follows the
+      usage pattern}
+    \Description{Clouds dynamically change their shapes.}
+    \label{fig:concept}
+  \end{center}
+\end{figure}
+
 {\em Cloud Morphing} is our vision for cloud virtualization in the future.
 By dynamically allocating microservices over distributed
 heterogeneous resources, a cloud service instance emerges at the best
 location and, as the usage pattern changes, the service instance also
-transforms the locations of the resources and their connections.
+transforms the locations of the resources and their connections
+(Figure \ref{fig:concept}).
 
 Microservice jobs are assigned to reduce the execution cost that
 consists of computing cost, communication cost with the user, access
