--- a/papers/edgesys 2023/main.tex
+++ b/papers/edgesys 2023/main.tex
@@ -6,12 +6,12 @@
 \title{Cloud Morphing: A Responsive Model for Distributed Resource Management}
 
 \author{Kenjiro Cho}
-\email{some@mail.com}
-\affiliation{IIJ Research Lab}
+\email{kjc@iijlab.net}
+\affiliation{\institution{IIJ Research Laboratory}\city{}\country{}}
 
 \author{Jean-François Baffier}
 \email{jf@baffier.fr}
-\affiliation{IIJ Research Lab}
+\affiliation{\institution{IIJ Research Laboratory}\city{}\country{}}
 
 \begin{document}
 
