Update scripts for figures. Update pseduo-costs plot

--- a/papers/edgesys2023/main.tex
+++ b/papers/edgesys2023/main.tex
@@ -1,7 +1,7 @@
 \documentclass[10pt,sigconf,letterpaper,nonacm]{acmart}
 \usepackage{mathtools}
 
-\graphicspath{{../../figures/conext2022/}}
+\graphicspath{{../../figures/edgesys2023/}}
 
 \title{Cloud Morphing: A Responsive Model for Distributed Resource Management}
 
