--- a/papers/edgesys2023/model.tex
+++ b/papers/edgesys2023/model.tex
@@ -108,9 +108,9 @@ the cost functions in Sec.~\ref{sec:variation}.
 
 \begin{figure}[tb]
   \begin{center}
-    \includegraphics[height=0.125\paperheight, width=0.9\columnwidth]{figure2-standard_pseudo_costs.pdf}
+    \includegraphics[width=0.9\columnwidth]{figure2-pseudo_costs.pdf}
     \vspace{-2.0ex}
-    \caption{Standard cost functions}
+    \caption{Standard cost functions and variations}
     \Description{The standard convex cost function and standard
       monotonic cost function.}
     \label{fig:std_costfunc}
