Update script and figure for equivalent_proportional_nodes

--- a/papers/edgesys2023/model.tex
+++ b/papers/edgesys2023/model.tex
@@ -140,7 +140,7 @@ Figure~\ref{fig:4node-ratio}.
 
 \begin{figure}[tb]
   \begin{center}
-    \includegraphics[width=1.0\columnwidth]{figure3-equivalent_nodes.pdf}
+    \includegraphics[width=1.0\columnwidth]{figure3-equivalent_proportional_nodes.pdf}
     \vspace{-2.0ex}
     \caption{Load distribution among 4 equivalent cost nodes:
       the load of each resource (top) and the total load (bottom)}
@@ -191,15 +191,15 @@ In short, when all resources are equal, the system tries to maintain
 the load of active resources in the {\em working load range}
 $[.5, .75]$, while keeping idle resources as much as possible.
 
-\begin{figure}
-  \begin{center}
-    \includegraphics[width=1.0\columnwidth]{figure4-proportional_nodes.pdf}
-    \vspace{-2.0ex}
-    \caption{Load distribution: 4 proportional cost nodes}
-    \Description{Simulation results with 4 nodes with proportional cost functions.}
-    \label{fig:4node-ratio}
-  \end{center}
-\end{figure}
+% \begin{figure}
+%   \begin{center}
+%     \includegraphics[width=1.0\columnwidth]{figure4-proportional_nodes.pdf}
+%     \vspace{-2.0ex}
+%     \caption{Load distribution: 4 proportional cost nodes}
+%     \Description{Simulation results with 4 nodes with proportional cost functions.}
+%     \label{fig:4node-ratio}
+%   \end{center}
+% \end{figure}
 
 When resources are not equal, the behavior becomes more complex, but
 the underlying mechanisms are the same.
