--- a/papers/edgesys 2023/cloudmorphing.bib
+++ b/papers/edgesys 2023/cloudmorphing.bib
@@ -531,3 +531,25 @@
   publisher = {IEEE},
   doi       = {10.1109/TCC.2013.9}
 }
+
+@INPROCEEDINGS{Alicherry-INFOCOM2012,
+  author={Alicherry, Mansoor and Lakshman, T.V.},
+  booktitle={IEEE INFOCOM 2012}, 
+  title={Network aware resource allocation in distributed clouds}, 
+  year={2012},
+  volume={},
+  number={},
+  pages={963-971},
+  doi={10.1109/INFCOM.2012.6195847}
+}
+
+@ARTICLE{Ren-2019,
+  author={Ren, Jinke and Yu, Guanding and He, Yinghui and Li, Geoffrey Ye},
+  journal={IEEE Transactions on Vehicular Technology}, 
+  title={Collaborative Cloud and Edge Computing for Latency Minimization}, 
+  year={2019},
+  volume={68},
+  number={5},
+  pages={5031-5044},
+  doi={10.1109/TVT.2019.2904244}
+}
