--- a/papers/edgesys 2023/main.tex
+++ b/papers/edgesys 2023/main.tex
@@ -3,7 +3,7 @@
 
 \graphicspath{{../../figures/conext2022/}}
 
-\title{Cloud Morphing: A Responsive Model for Distributed Resource Management}
+\title{A Distributed Resource Management Model towards Cloud Morphing}
 
 \author{Kenjiro Cho}
 \email{kjc@iijlab.net}
