Temporary edge scenario with flock of drones

--- a/papers/edgesys2023/simulation.tex
+++ b/papers/edgesys2023/simulation.tex
@@ -113,6 +113,16 @@ and how jobs for MDCs can be offloaded to upstream DCs.
 % active, except a short transient overshoot during the surge from time
 % 680.
 
+\begin{figure}[tb]
+  \begin{center}
+    \includegraphics[width=1.0\columnwidth]{figure-edge.pdf}
+    \vspace{-2.0ex}
+    \caption{Flocks of drone --- edge scenario placeholder}
+    \Description{Flocks of drone --- edge scenario placeholder}
+    \label{fig:edge}
+  \end{center}
+\end{figure}
+
 Overall, the simulation results illustrate the basic behaviors of the
 idle-resource pooling,
 quick responses to changing
