update title and intro

--- a/papers/edgesys2023/main.tex
+++ b/papers/edgesys2023/main.tex
@@ -3,7 +3,7 @@
 
 \graphicspath{{../../figures/edgesys2023/}}
 
-\title{A Distributed Resource Management Model towards Cloud Morphing}
+\title{An Autonomous Resource Management Model towards Cloud Morphing}
 
 \author{Kenjiro Cho}
 \email{kjc@iijlab.net}
@@ -18,9 +18,9 @@
 
 \begin{abstract}
 
-    In this paper, we envision future distributed cloud services with
+    In this paper, we envision future edge clouds with
     abundant heterogeneous computing resources,
-    and propose to apply dynamic pricing to a responsive model for
+    and propose to apply dynamic pricing to an autonomous model for
     distributed resource management.
     In this model, the pseudo cost of a resource is a function of the
     load, and the required resources for a job are allocated by a simple
