--- a/papers/edgesys2023/intro.tex
+++ b/papers/edgesys2023/intro.tex
@@ -1,53 +1,44 @@
-% \subsection{Background}
+\subsection{Autonomous Edge Clouds}
 
-%% cloud and virtualization technologies
-Cloud computing was brought about by virtualization technologies,
-enabling to build large pools of virtualized computing resources (e.g.,
-servers, storage, and network) and dynamically allocate necessary resources
-for providing services.
-However, cloud computing system itself is still on physical cloud
-infrastructure; cloud system operators manually manage
-physical servers and network switches to meet the overall demands
-so as not to overload certain resources.
+%% Edge computing and edge cloud
+In edge computing~\cite{Lopez-2015},
+computing resources are placed at locations closer to the users or
+data, to reduce latencies or to store sensitive data on premise.
+A possible future direction of edge computing is distributed cloud
+computing that utilizes diverse and geographically scattered computing
+resources at the edge, and make them act as part of the cloud.
 
-The next challenge would be to virtualize cloud infrastructure!
-By decoupling infrastructure management from service management,
-cloud resources such as servers and networks can be provided with a
-pay-as-you-go model.
-Then, cloud service operators are liberated from hardware resource management,
-as was the case for system administrators by cloud computing.
-Moreover, it is not enough to shift responsibility to operators of the
-new lower infrastructure layer. We need a new self-managing
-infrastructure layer which does not require human operators.
+%% edge: from specific purpose to general purpose
+Currently, most edge devices are resource-limited, and thus, designed
+and used for specific purposes.
+However, computing resources could be abundant in the future environment,
+if it becomes easier to utilize available computing resources.
+Furthermore, we might be able to exploit idle computing resources at
+home for a cloud, similar to the way in-house solar power systems are
+connected to a local utility grid.
+Once there are enough edge resources, they do not need to be
+micromanaged and can be used for general purposes.
 
-%% Edge computing and micro datacenters
-We also consider two recent trends in cloud computing.
-One trend is edge computing~\cite{Lopez-2015} and
-micro datacenters~\cite{Greenberg-2009}.
-Small-scale datacenters with a few racks or even a couple of servers
-can be placed at locations closer to the users, to reduce latencies
-or to store sensitive data on premise, and make them act as part of
-the cloud.
-A possible future direction is distributed cloud computing that
-utilizes diverse and geographically scattered computing resources.
-It will require a new management mechanism to efficiently utilize such
-resources.
-On the other hand, computing resources will be abundant in the
-environment so that it will be no longer necessary to micromanage
-computing resources.
-
-%% serverless, micro services
-Another trend is microservices~\cite{nadareishvili2016microservice}
-and serverless computing~\cite{Shafiei-2022} in which
-a cloud service is composed of a collection of loosely-coupled
+%% microservice is a driving factor
+A driving factor to exploit available computing resources for cloud
+services is the shift to microservices~\cite{nadareishvili2016microservice}
+and serverless computing~\cite{Shafiei-2022},
+in which a cloud service is composed of a collection of loosely-coupled
 lightweight services.
 Each microservice is ephemeral and short-lived, and can be executed
 in a stateless container,
 which enables flexible and efficient use of underlying cloud
 resources.
-The concept has something in common with early packet switching so
-that it might open up new possibilities to apply packet switching
-techniques to handling microservice jobs.
+%The concept has something in common with early packet switching so
+%that it might open up new possibilities to apply packet switching
+%techniques to handling microservice jobs.
+
+%% central control to autonomous management
+For such an edge cloud, cloud management also needs to change from
+the current central control to distributed control.
+Local requests should be handled by local edge nodes, without
+being instructed by the central controller.
+An autonomous management model is necessary.
 
 %% energy saving?
 In addition, we should take energy saving into consideration as it is
@@ -66,16 +57,16 @@ essential for future clouds~\cite{Mastelic-2015,masanet2020recalibrating}.
   \end{center}
 \end{figure}
 
-{\em Cloud Morphing} is our vision for cloud virtualization in the future.
+{\em Cloud Morphing} is our vision for edge clouds in the future.
 By dynamically allocating microservices over distributed
 heterogeneous resources, a cloud service instance emerges at the best
 location and, as the usage pattern changes, the service instance also
 transforms the locations of the resources and their connections
 (Figure \ref{fig:concept}).
 
-Microservice jobs are assigned to reduce the execution cost that
-consists of computing cost, communication cost with the user, access
-cost to database, and other factors.
+Microservice jobs are assigned to efficiently use required resources
+such as computing, communication with the user, access to
+database, and other factors.
 For examples, an interactive task will follow the user when the user
 moves, while a data-intensive task will stay close to the data
 regardless of the user location.
@@ -85,8 +76,17 @@ Moreover, services are inherently fault-tolerant and resilient
 against outages or disasters since faulty resources are
 automatically evicted from the resource pool.
 
-From the operational perspective, the physical resource management
-becomes simpler with a larger resource pool.
+From the operational perspective, it can be viewed as virtualization
+of cloud infrastrcuture.
+Currently, cloud system operators manually manage phisical servers and
+network switches to meet the overall demands.
+By decoupling physical resource management from service management,
+cloud service operators are liberated from hardware resource management.
+
+Moreover, it is not enough to shift responsibility to operators of the
+new lower infrastructure layer. We need a new self-managing
+infrastructure layer which does not require human operators.
+The physical resource management becomes simpler with a resource pool.
 Physical nodes can be easily attached to or detached from the resource pool.
 When there is a consistent hotspot, it can be alleviated or solved by
 placing new resources close to the hotspot and then attaching them to
