--- a/papers/edgesys2023/cloudmorphing.bib
+++ b/papers/edgesys2023/cloudmorphing.bib
@@ -1,7 +1,7 @@
 
 @inproceedings{Xu2017-zenith,
-  author    = {Xu, Jinlai and Palanisamy, Balaji and Ludwig, Heiko and Wang, Qingyang},
-  booktitle = {2017 IEEE International Conference on Edge Computing (EDGE)},
+  author    = {Xu, J. and Palanisamy, B. and Ludwig, H. and Wang, Q.},
+  booktitle = {EDGE},
   title     = {Zenith: Utility-Aware Resource Allocation for Edge Computing},
   year      = {2017},
   volume    = {},
@@ -12,7 +12,7 @@
 }
 
 @article{Zhang2017-VMauction,
-  author  = {Zhang, Xiaoxi and Huang, Zhiyi and Wu, Chuan and Li, Zongpeng and Lau, Francis C. M.},
+  author  = {Zhang, X. and Huang, Z. and Wu, C. and Li, Z. and Lau, F.C.M.},
   journal = {IEEE/ACM Transactions on Networking},
   title   = {Online Auctions in IaaS Clouds: Welfare and Profit Maximization With Server Costs},
   year    = {2017},
@@ -35,7 +35,7 @@
 
 @article{gibbens1999resource,
   title     = {Resource pricing and the evolution of congestion control},
-  author    = {Gibbens, Richard J and Kelly, Frank P},
+  author    = {Gibbens, R.J. and Kelly, F.P.},
   journal   = {Automatica},
   volume    = {35},
   number    = {12},
@@ -57,7 +57,7 @@
 
 @article{Rikhtegar2021BiTEAD,
   title   = {BiTE: a dynamic bi-level traffic engineering model for load balancing and energy efficiency in data center networks},
-  author  = {Negar Rikhtegar and Manijeh Keshtgari and Omid Bushehrian and Guy Pujolle},
+  author  = {N. Rikhtegar and M. Keshtgari and O. Bushehrian and G. Pujolle},
   journal = {Appl. Intell.},
   year    = {2021},
   volume  = {51},
@@ -65,7 +65,7 @@
 }
 
 @article{Briscoe2003-M3I,
-  author     = {Briscoe, Bob and Darlagiannis, Vasilios and Heckman, Oliver and Oliver, Huw and Siris, Vasilios and Songhurst, David and Stiller, Burkhard},
+  author     = {Briscoe, B. and Darlagiannis, V. and Heckman, O. and Oliver, H. and Siris, V. and Songhurst, D. and Stiller, B.},
   title      = {A Market Managed Multi-Service Internet (M3I)},
   year       = {2003},
   issue_date = {March, 2003},
@@ -120,15 +120,14 @@
 }
 
 @inproceedings{Suresh-SOA-SOCC2017,
-  author    = {Suresh, Lalith and Bodik, Peter and Menache, Ishai and Canini, Marco and Ciucu, Florin},
+  author    = {Suresh, L. and Bodik, P. and Menache, I. and Canini, M. and Ciucu, F.},
   title     = {Distributed Resource Management across Process Boundaries},
   year      = {2017},
   isbn      = {9781450350280},
-  publisher = {Association for Computing Machinery},
-  address   = {New York, NY, USA},
+  publisher = {ACM},
   url       = {https://doi.org/10.1145/3127479.3132020},
   doi       = {10.1145/3127479.3132020},
-  booktitle = {Proceedings of the 2017 Symposium on Cloud Computing},
+  booktitle = {SoCC},
   pages     = {611–623},
   numpages  = {13},
   keywords  = {rate limiting, microservices, scheduling, resource management, service-oriented architectures},
@@ -137,8 +136,8 @@
 }
 
 @inproceedings{Song-INFOCOM2017,
-  author    = {Song, Jiayi and Guerin, Roch},
-  booktitle = {2017 IEEE Conference on Computer Communications Workshops (INFOCOM WKSHPS)},
+  author    = {Song, J. and Guerin, R.},
+  booktitle = {IEEE INFOCOM WKSHPS},
   title     = {Pricing and bidding strategies for cloud computing spot instances},
   year      = {2017},
   volume    = {},
@@ -149,12 +148,11 @@
 }
 
 @article{Kilcioglu-SIGMETRICS2015,
-  author     = {Kilcioglu, Cinar and Maglaras, Costis},
+  author     = {Kilcioglu, C. and Maglaras, C.},
   title      = {Revenue Maximization for Cloud Computing Services},
   year       = {2015},
   issue_date = {December 2015},
-  publisher  = {Association for Computing Machinery},
-  address    = {New York, NY, USA},
+  publisher  = {ACM},
   volume     = {43},
   number     = {3},
   issn       = {0163-5999},
@@ -178,12 +176,11 @@
 }
 
 @inproceedings{Wang-hotcloud2010,
-  author    = {Wang, Hongyi and Jing, Qingfeng and Chen, Rishan and He, Bingsheng and Qian, Zhengping and Zhou, Lidong},
+  author    = {Wang, H. and Jing, Q. and Chen, R. and He, B. and Qian, Z. and Zhou, L.},
   title     = {Distributed Systems Meet Economics: Pricing in the Cloud},
   year      = {2010},
-  publisher = {USENIX Association},
-  address   = {USA},
-  booktitle = {Proceedings of the 2nd USENIX Conference on Hot Topics in Cloud Computing},
+  publisher = {USENIX},
+  booktitle = {HotCloud},
   pages     = {6},
   numpages  = {1},
   location  = {Boston, MA},
@@ -230,8 +227,8 @@
 }
 
 @inproceedings{Song-2014,
-  author    = {Song, Shaoyi and Lv, Tingjie and Chen, Xia},
-  booktitle = {2014 Sixth International Conference on Ubiquitous and Future Networks (ICUFN)},
+  author    = {Song, S. and Lv, T. and Chen, X.},
+  booktitle = {ICUFN},
   title     = {A cooperative game method for load balancing in cloud based on cost-efficiency},
   year      = {2014},
   volume    = {},
@@ -270,7 +267,7 @@
 }
 
 @article{Albrecht2008,
-  author     = {Albrecht, Jeannie and Oppenheimer, David and Vahdat, Amin and Patterson, David A.},
+  author     = {Albrecht, J. and Oppenheimer, D. and Vahdat, A. and Patterson, D.A.},
   title      = {Design and Implementation Trade-Offs for Wide-Area Resource Discovery},
   year       = {2008},
   issue_date = {September 2008},
@@ -284,12 +281,11 @@
   journal    = {ACM Trans. Internet Technol.},
   month      = {oct},
   articleno  = {18},
-  numpages   = {44},
   keywords   = {PlanetLab, Resource discovery}
 }
 
 @techreport{pricing-internet-1994,
-  author      = {Jeffrey K. MacKie-Mason and Hal R. Varian},
+  author      = {J.K. MacKie-Mason and H.R. Varian},
   title       = {{Pricing the Internet}},
   year        = 1994,
   month       = Jan,
@@ -300,12 +296,11 @@
 }
 
 @article{Sen-2013,
-  author     = {Sen, Soumya and Joe-Wong, Carlee and Ha, Sangtae and Chiang, Mung},
+  author     = {Sen, S. and Joe-Wong, C. and Ha, S. and Chiang, M.},
   title      = {A Survey of Smart Data Pricing: Past Proposals, Current Plans, and Future Trends},
   year       = {2013},
   issue_date = {November 2013},
-  publisher  = {Association for Computing Machinery},
-  address    = {New York, NY, USA},
+  publisher  = {ACM},
   volume     = {46},
   number     = {2},
   issn       = {0360-0300},
@@ -319,8 +314,8 @@
 }
 
 @inproceedings{Wagner-2012,
-  author    = {Wagner, Stuart and Berg, Eric Van Den and Giacopelli, Jim and Ghetie, Andrei and Burns, Jim and Tauil, Miriam and Sen, Soumya and Wang, Michael and Chiang, Mung and Lan, Tian and Laddaga, Robert and Robertson, Paul and Manghwani, Prakash},
-  booktitle = {2012 IEEE Sixth International Conference on Self-Adaptive and Self-Organizing Systems Workshops},
+  author    = {Wagner, S. and Berg, E.V.D. and Giacopelli, J. and Ghetie, A. and Burns, J. and Tauil, M. and Sen, S. and Wang, M. and Chiang, M. and Lan, T. and Laddaga, R. and Robertson, P. and Manghwani, P.},
+  booktitle = {SASOW},
   title     = {Autonomous, Collaborative Control for Resilient Cyber Defense (ACCORD)},
   year      = {2012},
   volume    = {},
@@ -331,16 +326,15 @@
 }
 
 @inproceedings{Murphy94distributedpricing,
-  author    = {John Murphy and Liam Murphy and Edward C. Posner},
+  author    = {J. Murphy and L. Murphy and E.C. Posner},
   title     = {Distributed Pricing For Embedded ATM Networks},
-  booktitle = {in Proceedings of the 14th International Teletraffic Congress, edited by J. Labetoulle and J.W. Roberts, Elsevier Science},
+  booktitle = {The 14th International Teletraffic Congress, Elsevier Science},
   year      = {1994},
   pages     = {1053--1063}
 }
 
 @incollection{MURPHY19941053,
   title     = {Distributed Pricing For Embedded ATM Networks},
-  editor    = {JACQUES LABETOULLE and JAMES W. ROBERTS},
   series    = {Teletraffic Science and Engineering},
   publisher = {Elsevier},
   volume    = {1},
@@ -350,19 +344,18 @@
   issn      = {1388-3437},
   doi       = {https://doi.org/10.1016/B978-0-444-82031-0.50108-6},
   url       = {https://www.sciencedirect.com/science/article/pii/B9780444820310501086},
-  author    = {John Murphy and Liam Murphy and Edward C. Posner}
+  author    = {J. Murphy and L. Murphy and E.C. Posner}
 }
 
 @inproceedings{Chen-SOCC-2014,
-  author    = {Chen, Liuhua and Shen, Haiying and Sapra, Karan},
+  author    = {Chen, L. and Shen, H. and Sapra, K.},
   title     = {Distributed Autonomous Virtual Resource Management in Datacenters Using Finite-Markov Decision Process},
   year      = {2014},
   isbn      = {9781450332521},
-  publisher = {Association for Computing Machinery},
-  address   = {New York, NY, USA},
+  publisher = {ACM},
   url       = {https://doi.org/10.1145/2670979.2671003},
   doi       = {10.1145/2670979.2671003},
-  booktitle = {Proceedings of the ACM Symposium on Cloud Computing},
+  booktitle = {ACM Symposium on Cloud Computing},
   pages     = {1–13},
   numpages  = {13},
   keywords  = {MDP, Resource management, Cloud computing},
@@ -372,7 +365,7 @@
 
 @article{masanet2020recalibrating,
   title     = {Recalibrating global data center energy-use estimates},
-  author    = {Masanet, Eric and Shehabi, Arman and Lei, Nuoa and Smith, Sarah and Koomey, Jonathan},
+  author    = {Masanet, E. and Shehabi, A. and Lei, N. and Smith, S. and Koomey, J.},
   journal   = {Science},
   volume    = {367},
   number    = {6481},
@@ -382,11 +375,11 @@
 }
 
 @article{Mastelic-2015,
-  author     = {Mastelic, Toni and Oleksiak, Ariel and Claussen, Holger and Brandic, Ivona and Pierson, Jean-Marc and Vasilakos, Athanasios V.},
+  author     = {Mastelic, T. and Oleksiak, A. and Claussen, H. and Brandic, I. and Pierson, J. and Vasilakos, A.V.},
   title      = {Cloud Computing: Survey on Energy Efficiency},
   year       = {2014},
   issue_date = {January 2015},
-  publisher  = {Association for Computing Machinery},
+  publisher  = {ACM},
   address    = {New York, NY, USA},
   volume     = {47},
   number     = {2},
@@ -402,7 +395,7 @@
 }
 
 @article{Shafiei-2022,
-  author    = {Shafiei, Hossein and Khonsari, Ahmad and Mousavi, Payam},
+  author    = {Shafiei, H. and Khonsari, A. and Mousavi, P.},
   title     = {Serverless Computing: A Survey of Opportunities, Challenges, and Applications},
   year      = {2022},
   publisher = {Association for Computing Machinery},
@@ -411,14 +404,13 @@
   url       = {https://doi.org/10.1145/3510611},
   doi       = {10.1145/3510611},
   abstract  = {The emerging serverless computing paradigm has attracted attention from both academia and industry. This paradigm brings benefits such as less operational complexity, a pay-as-you-go pricing model, and an auto-scaling feature. The paradigm opens up new opportunities and challenges for cloud application developers. In this paper, we present a comprehensive overview of the past development as well as the recent advances in research areas related to serverless computing. First, we survey serverless applications introduced in the literature. We categorize applications in eight domains and separately discuss the objectives and the viability of the serverless paradigm along with challenges in each of those domains. We then classify those challenges into nine topics and survey the proposed solutions. Finally, we present the areas that need further attention from the research community and identify open problems.},
-  note      = {Just Accepted},
   journal   = {ACM Comput. Surv.},
   month     = {jan},
   keywords  = {Function-as-a-Service (FaaS), Serverless Computing, Cloud Services}
 }
 
 @article{Lopez-2015,
-  author     = {Garcia Lopez, Pedro and Montresor, Alberto and Epema, Dick and Datta, Anwitaman and Higashino, Teruo and Iamnitchi, Adriana and Barcellos, Marinho and Felber, Pascal and Riviere, Etienne},
+  author     = {Lopez, P.G. and Montresor, A. and Epema, D. and Datta, A. and Higashino, T. and Iamnitchi, A. and Barcellos, M. and Felber, P. and Riviere, E.},
   title      = {Edge-Centric Computing: Vision and Challenges},
   year       = {2015},
   issue_date = {October 2015},
@@ -438,12 +430,11 @@
 }
 
 @article{Greenberg-2009,
-  author     = {Greenberg, Albert and Hamilton, James and Maltz, David A. and Patel, Parveen},
+  author     = {Greenberg, A. and Hamilton, J. and Maltz, D.A. and Patel, P.},
   title      = {The Cost of a Cloud: Research Problems in Data Center Networks},
   year       = {2009},
   issue_date = {January 2009},
-  publisher  = {Association for Computing Machinery},
-  address    = {New York, NY, USA},
+  publisher  = {ACM},
   volume     = {39},
   number     = {1},
   issn       = {0146-4833},
@@ -460,7 +451,7 @@
 
 @book{nadareishvili2016microservice,
   title     = {Microservice architecture: aligning principles, practices, and culture},
-  author    = {Nadareishvili, Irakli and Mitra, Ronnie and McLarty, Matt and Amundsen, Mike},
+  author    = {Nadareishvili, I. and Mitra, R. and McLarty, M. and Amundsen, M.},
   year      = {2016},
   publisher = {" O'Reilly Media, Inc."}
 }
@@ -521,7 +512,7 @@
 }
 
 @article{Zaman-2013,
-  author    = {Zaman, Sharrukh and Grosu, Daniel},
+  author    = {Zaman, S. and Grosu, D.},
   journal   = {IEEE Transactions on Cloud Computing},
   title     = {A Combinatorial Auction-Based Mechanism for Dynamic VM Provisioning and Allocation in Clouds},
   year      = {2013},
