--- a/papers/edgesys2023/model.tex
+++ b/papers/edgesys2023/model.tex
@@ -10,7 +10,7 @@
 \end{figure}
 
 Our resource management model is explained using a simple system
-configuration with 2 datacenters (DCs) and 2 micro-datacenters (MDCs)
+configuration with 2 datacenters (DCs) and 2 micro-datacenters~\cite{Greenberg-2009} (MDCs)
 shown in Figure~\ref{fig:system}.
 When a user requests a service to a nearby service allocation server,
 the service server instantiates the requested service into a series of
